web/client/themes/default/less/sliders.less
//
// Copyright 2021, GeoSolutions Sas.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree.
//

// **************
// Theme
// **************
#ms-components-theme(@theme-vars) {
    .noUi-target {
        .background-color-var(@theme-vars[primary]);

        &.noUi-horizontal {
            .noUi-base {
                .noUi-origin {
                    .background-color-var(@theme-vars[main-variant-bg]);

                    .noUi-handle {
                        .border-color-var(@theme-vars[primary-contrast]);
                        .background-color-var(@theme-vars[primary]);

                        &:hover {
                            .background-color-var(@theme-vars[primary]);
                        }

                        &:before {
                            .color-var(@theme-vars[primary-contrast]);
                        }

                        .noUi-tooltip {
                            &:hover {
                                .background-color-var(@theme-vars[primary]);
                            }
                        }
                    }
                }
            }
        }
    }

    .noUi-target[disabled="true"],
    .mapstore-slider.with-tooltip .noUi-target[disabled="true"] {
        &.noUi-horizontal {
            .background-color-var(@theme-vars[main-variant-bg]);

            .noUi-base {
                .noUi-origin {
                    .noUi-handle {
                        box-shadow: none;
                        .background-color-var(@theme-vars[main-variant-bg]);
                        .noUi-tooltip {
                            .background-color-var(@theme-vars[main-variant-bg]);
                        }
                    }
                }
            }
        }
    }

    .mapstore-slider {
        &.with-tooltip {
            .noUi-target {
                &.noUi-horizontal {
                    .noUi-base {
                        &:after {
                            .background-color-var(@theme-vars[main-variant-bg]);
                            .border-color-var(@theme-vars[main-border-color]);
                        }

                        .noUi-origin {
                            .noUi-handle {
                                .noUi-tooltip {
                                    .color-var(@theme-vars[primary-contrast]);
                                    .background-color-var(@theme-vars[primary]);
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

// **************
// Layout
// **************
@import (less) "~react-nouislider/example/nouislider.css";

.noUi-target {
    border-color: none;
    cursor: pointer;
    &.noUi-horizontal {
        height: 4px;
        margin: 10px 0;
        border-radius: 0;
        border: none;
        .noUi-base {
            .noUi-origin {
                .noUi-handle {
                    border: none;
                    border-top-width: 1px;
                    border-top-style: solid;
                    width: 10px;
                    height: 15px;
                    left: -5px;
                    top: -8px;
                    .shadow;
                    cursor: pointer;
                    border-radius: @border-radius-base;

                    &:before,
                    &:after {
                        height: @square-btn-size;
                        width: @square-btn-size;
                        background: transparent;
                        left: 0;
                        top: 0;
                    }
                    &:before {
                        font-family: 'mapstore2';
                        text-align: center;
                    }
                    .noUi-tooltip {
                        cursor: pointer;
                    }
                }
            }
        }
        .noUi-pips {
            &.noUi-pips-horizontal {
                .noUi-value {
                    text-align: right;
                    -ms-transform: rotate(270deg); // IE 9
                    -webkit-transform: rotate(270deg); // Chrome, Safari, Opera
                    transform: rotate(270deg);
                    &.noUi-value-horizontal {
                        margin-left: -30px;
                        margin-top: 22px;
                    }
                }
            }
        }
    }
}

.noUi-target[disabled="true"], .mapstore-slider.with-tooltip .noUi-target[disabled="true"] {
    cursor: not-allowed;
    &.noUi-horizontal {
        background-color:  @input-bg-disabled;
        .noUi-base {
            .noUi-origin {
                .noUi-handle {
                    cursor: not-allowed;
                    .noUi-tooltip {
                        background-color:  @input-bg-disabled;
                        &:hover {
                            cursor: not-allowed;
                        }
                    }
                    &:hover {
                        cursor: not-allowed;
                    }
                }
            }
        }
    }
}

.mapstore-slider {
    .noUi-target.noUi-horizontal {
        height: 3px;
    }
    &.with-tooltip {
        .noUi-target {
            &.noUi-horizontal {
                @ms-slider-margin: 13px;
                padding: 0 @ms-slider-margin;
                .noUi-base {
                    &:before,
                    &:after {
                        content: "";
                        position: absolute;
                        top: 0;
                        height: 100%;
                        display: block;
                    }
                    &:before {
                        left: -@ms-slider-margin;
                        width: @ms-slider-margin;

                    }
                    &:after {
                        right: -@ms-slider-margin;
                        /* hide primary color background */
                        width: @ms-slider-margin + 4;
                    }
                    .noUi-origin {
                        .noUi-handle {
                            &:before,
                            &:after {
                                display: none;
                            }
                            left: -12px;
                            width: 24px;
                            height: 10px;
                            top: -5px;
                            .noUi-tooltip {
                                padding: 0;
                                top: 0;
                                left: 0;
                                font-size: 8px;
                                border: none;
                                border-radius: @border-radius-base;
                                width: inherit;
                                height: inherit;
                                display: flex;
                                align-items: center;
                                justify-content: center;
                                line-height: @square-btn-size;
                            }
                        }
                    }
                }
            }
        }
    }
    &:not(.with-tooltip) {
        .noUi-target.noUi-horizontal .noUi-base .noUi-origin .noUi-handle {
            width: 10px;
            height: 10px;
            left: 0;
            top: 2px;
            right: auto;
            bottom: auto;
            transform: translate(-50%, -50%);
            border-radius: 50%;
            border: none;
            &:after,
            &:before {
                display: none;
            }
        }
    }
}

// Filter widget slider: state and pip label layout only
.ms-filter-slider-items {
    padding-left: 25px;
    padding-right: 25px;
}
.ms-filter-slider.ms-filter-slider--no-selection {
    .mapstore-slider .noUi-target.noUi-horizontal .noUi-base .noUi-origin .noUi-handle {
        opacity: 0;
        pointer-events: none;
    }
}

.ms-filter-slider.ms-filter-slider--with-ticks .ms-filter-slider-control {
    height: var(--ms-filter-slider-control-height, 60px);
}

.ms-filter-slider .mapstore-slider .noUi-target.noUi-horizontal .noUi-pips.noUi-pips-horizontal {
    cursor: default;
    padding: 5px 0px;

    .noUi-marker {
        cursor: default;
        height: 8px;
    }

    .noUi-value {
        width: fit-content;
        font-size: 10px;
        cursor: default;
        white-space: normal;
        -webkit-transform-origin: var(--ms-filter-slider-tick-origin, center center);
        transform-origin: var(--ms-filter-slider-tick-origin, center center);
        -webkit-transform: translate3d(var(--ms-filter-slider-tick-translate-x, -50%), var(--ms-filter-slider-tick-translate-y, -50%), 0) rotate(var(--ms-filter-slider-tick-angle, -90deg));
        transform: translate3d(var(--ms-filter-slider-tick-translate-x, -50%), var(--ms-filter-slider-tick-translate-y, -50%), 0) rotate(var(--ms-filter-slider-tick-angle, -90deg));

        &.noUi-value-horizontal {
            margin-left: 0;
            margin-top: 8px;
        }
    }

    .noUi-value-large {
        margin-top: 0;
        padding-top: 10px;
    }
}

